2012-04-11  Murray Cumming  <murrayc@murrayc.com>

	Windows build: Add a windows.h include.

	* glom/utility_widgets/imageglom.cc: As suggested by 
	alien in bug #673096

2012-03-29  Murray Cumming  <murrayc@murrayc.com>

	Fixed some simple warnings found by scan-build.

	* glom/libglom/report_builder.cc:
	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/python_embed/glom_python.cc: Mostly variables that were
	set but then not used.

2012-03-29  Murray Cumming  <murrayc@murrayc.com>

	Field: Remove get_holder().

	* glom/libglom/data_structure/field.[h|cc]:
	* glom/libglom/python_embed/py_glom_record.cc:
	* glom/mode_data/datawidget/treemodel_db.cc: Replace or remove use
	of Field::get_holder().

2012-03-29  Murray Cumming  <murrayc@murrayc.com>

	ConnectionPool: create_database(): Take a progress slot.

	* glom/libglom/connectionpool.[h|cc]::
	* glom/libglom/connectionpool_backends/backend.h: create_database():
	Add a progress_slot parameter, to be emitted.
	* glom/libglom/connectionpool_backends/postgres.[h|cc]:
	* glom/libglom/connectionpool_backends/postgres_central.[h|cc]:
	* glom/libglom/connectionpool_backends/postgres_self.[h|cc]:
	* glom/libglom/connectionpool_backends/sqlite.[h|cc]:
	* glom/libglom/db_utils.cc:
	* glom/appwindow.[h|cc]: Adapt.

1.21.8:

2012-03-28  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the latest gtkmm, with --enable-warnings=fatal.

	* glom/mode_data/box_data.[h|cc]: on_Button_Find(): Let the signal
	handler do the check and warning about no criteria.
	* glom/frame_glom.cc: on_notebook_find_criteria(): Check for quickfind
	criteria here too, so we can use this to do quick finds too, which lets
	use just use the existing Find button (the window's default activate widget),
	instead of trying to make the separate quickfind Find button be the default
	for the entry, but not for other widgets.